@@ -1,3 +1,8 @@
+2006-03-29  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: More gstreamer0.10 love. The new api is nice, but
+	  porting to it sucks big time.
+
 2006-03-19  Gautier Portet <kassoulet gmail com>
 
 	* soundconverter.py: Files permissions are copied from source file.
